[level 3] Title: 베스트앨범, Time: 7.53 ms, Memory: 64 MB -BaekjoonHub